tests/snapshots/run_wpt_conformance__onnx_scatterND_4D_float16_tensors_by_non-negative_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "scatterND.https.any.js",
    "scatterND 4D float16 tensors by non-negative indices",
    "onnx",
    "PASS",
)
